--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    
-    <title>Nikitoshas Ltd.</title>
+
+    <title>Digital time line</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
